position too long fix

--- a/src/components/CardComponent/CardComponent.less
+++ b/src/components/CardComponent/CardComponent.less
@@ -90,16 +90,16 @@
 .company-name {
   font-size: 16px;
   font-weight: bold;
-  // max-width: 80%; /* Constrain the width to avoid overflowing */
+  max-width: 250px; /* Constrain the width to avoid overflowing */
   white-space: nowrap;
   /* Ensure text stays on one line */
   overflow: hidden;
   /* Hide overflowed text */
-  // text-overflow: ellipsis;
+  text-overflow: ellipsis;
   /* Add '...' to truncated text */
-  width: fit-content;
-  position: relative;
-  width: auto;
+  // width: fit-content;
+  // position: relative;
+  // width: auto;
   //   -webkit-transition: 0.5s ease-in;
   //   -moz-transition: 0.5s ease-in;
   //   -o-transition: 0.5s ease-in;
@@ -121,14 +121,14 @@
   // color: #333;
 
   // font-weight: bold;
-  // max-width: 80%; /* Constrain the width to avoid overflowing */
+  max-width: 250px; /* Constrain the width to avoid overflowing */
   white-space: nowrap;
   /* Ensure text stays on one line */
   overflow: hidden;
   /* Hide overflowed text */
   text-overflow: ellipsis;
   /* Add '...' to truncated text */
-  width: fit-content;
+  // width: fit-content;
 }
 
 .position {
